# CrewAI-Test

./: .env  Makefile  QUICKSTART.md  README.md  analysis_00.md  analysis_01.md  apoema_agent.py  apoema_flow.py  assessment_data.json  docling-json.json  main.py  med_vet_assessment_data.json  output_1771885564.9188511.md  output_20260223193144.md  output_20260223194123.md  output_20260224174621.md  pipeline.py  prompt_loader.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
config/agents/: data_reader.yaml  report_analyzer.yaml  summarizer.yaml  utility_assessor.yaml
config/tasks/: task1_analyze.yaml  task2_summarize.yaml  task3_extract_plots.yaml  task4_analyze_plots.yaml  task5_criteria_mapping.yaml  task6_utility_assessment.yaml
input/: cc_assessment_data.json  formacao-docentes.csv  media-docentes.csv
output/: conformance_report_20260304084544.md  conformance_report_20260317145236.md  output_20260223193556.md  output_20260224180931.md  output_20260224181326.md  output_20260224182307.md  output_20260224182551.md  output_20260224184444.md  output_20260224185629.md  output_20260224185938.md  output_20260224190235.md  output_20260225185526.md  output_20260304083940.md  output_20260304084544.md  output_20260317145235.md  utility_assessment_20260317145236.md
prompts/agents/: data_reader.md  data_reader.yaml  plot_data_analyst.yaml  plot_insights_generator.yaml  report_analyzer.md  report_analyzer.yaml  summarizer.md  summarizer.yaml  utility_assessor.md  utility_assessor.yaml
prompts/output_formats/: task1_output.md  task2_output.md
prompts/tasks/: task1_analyze.md  task1_analyze.yaml  task2_summarize.md  task2_summarize.yaml  task3_extract_plots.md  task3_extract_plots.yaml  task4_analyze_plots.md  task4_analyze_plots.yaml  task5_criteria_mapping.md  task5_criteria_mapping.yaml  task6_utility_assessment.md  task6_utility_assessment.yaml  task7_plot_data_analysis.yaml  task8_plot_insights.yaml  task9_plot_utility_importance.yaml
