[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "apoema-crewai"
version = "0.1.0"
description = "APOEMA-CrewAI - AI-powered assessment and analysis system that integrates with APOEMA dashboard system to analyze its plots and provide insights and recommendations."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Rodrigo Valeretto", email = "rodrigoaugustovaleretto@gmail.com"}
]

dependencies = [
    "crewai>=1.14.5",
    "crewai[tools]>=1.14.5",
    "crewai_files>=1.14.5",
    "openai>=2.37.0",
    "google-genai>=2.4.0",
    "pydantic>=2.11.9,<2.13",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "pyyaml>=6.0.3",
    "ollama>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/RodrigoValeretto/APOEMA-CrewAI"
Repository = "https://github.com/RodrigoValeretto/APOEMA-CrewAI"
Issues = "https://github.com/RodrigoValeretto/APOEMA-CrewAI/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 100
